<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:numericShortcut="0" android:id="@+id/itemKeyboard" android:title="@string/showkbd_label" android:icon="@drawable/keyboard" android:showAsAction="ifRoom|withText" android:focusable="false"/>
    <item android:numericShortcut="2" android:alphabeticShortcut="m" android:id="@+id/itemCenterMouse" android:title="@string/center_mouse" android:icon="@drawable/mouse" android:showAsAction="ifRoom|withText" android:focusable="false"/>    
    <item android:id="@+id/itemSaveState" android:title="@string/save_state" android:icon="@drawable/diskette" android:showAsAction="ifRoom|withText" android:focusable="false"/>
        <item android:id="@+id/itemMonitor" android:title="@string/monitor" android:icon="@drawable/icon" android:showAsAction="ifRoom|withText" android:focusable="false"></item>
    <item android:numericShortcut="7" android:alphabeticShortcut="d" android:id="@+id/itemDisconnect" android:title="@string/disconnect" android:icon="@drawable/spintop" android:showAsAction="ifRoom|withText" android:focusable="false"></item>    
    <item android:numericShortcut="8" android:alphabeticShortcut="a" android:id="@+id/itemCtrlAltDel" android:title="@string/ctrl_alt_del" android:icon="@android:drawable/ic_menu_share" android:showAsAction="ifRoom|withText" android:focusable="false"/>
    <item android:id="@+id/itemCtrlC" android:title="@string/ctrl_c" android:icon="@android:drawable/ic_menu_share" android:showAsAction="ifRoom|withText" android:focusable="false"/>
    <item android:numericShortcut="1" android:alphabeticShortcut="s" android:id="@+id/itemSpecialKeys" android:title="@string/special_keys" android:icon="@android:drawable/ic_dialog_dialer" android:showAsAction="ifRoom|withText" android:focusable="false"/>    
    <item android:alphabeticShortcut="g" android:id="@+id/itemSendKeyAgain" android:title="@string/send_key_again" android:showAsAction="ifRoom|withText" android:focusable="false"/>
    
    <item android:id="@+id/itemEnterText" android:alphabeticShortcut="e" android:title="@string/enter_text" android:icon="@android:drawable/ic_menu_edit" android:showAsAction="ifRoom|withText" android:focusable="false"/>
    <item android:numericShortcut="5" android:alphabeticShortcut="p" android:id="@+id/itemInputMode" android:title="@string/input_mode" android:icon="@android:drawable/ic_input_get" android:showAsAction="ifRoom|withText" android:focusable="false">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/itemInputTouchPanZoomMouse" android:title="@string/input_mode_touch_pan_zoom_mouse"/>
                <item android:id="@+id/itemInputTouchpad" android:title="@string/input_mode_touchpad"></item>
                <item android:id="@+id/itemInputFitToScreen" android:checked="true" android:title="@string/input_mode_fit_to_screen"/>
                <item android:id="@+id/itemInputPan" android:title="@string/input_mode_panning"/>
                <item android:id="@+id/itemInputMouse" android:title="@string/input_mode_mouse"/>
                <item android:id="@+id/itemInputTouchPanTrackballMouse" android:title="@string/input_mode_touchpad_pan_trackball_mouse"/>
                <item android:id="@+id/itemInputDPadPanTouchMouse" android:title="@string/input_mode_dpad_pan_touchpad_mouse"/>
	    	
            </group>
        </menu>
    </item>
    <group android:checkableBehavior="all">
        <item android:numericShortcut="6" android:alphabeticShortcut="f" android:id="@+id/itemFollowMouse" android:title="@string/pan_follow_mouse"/>
        <item android:title="@string/mouse_follow_pan" android:id="@+id/itemFollowPan"/>
    </group>
    <item android:numericShortcut="3" android:alphabeticShortcut="c" android:id="@+id/itemColorMode" android:title="@string/color_mode" android:icon="@android:drawable/ic_menu_preferences"  android:showAsAction="ifRoom|withText" android:focusable="false"></item>
    <item android:numericShortcut="4" android:alphabeticShortcut="z" android:id="@+id/itemScaling" android:title="@string/scaling" android:icon="@android:drawable/ic_menu_zoom"  android:showAsAction="ifRoom|withText" android:focusable="false">
        <menu>
            <group android:id="@+id/groupScaling" android:checkableBehavior="single">
                <item android:id="@+id/itemZoomable" android:title="@string/scaling_zoomable" />
                <item android:id="@+id/itemOneToOne" android:title="@string/one_to_one"/>
                <item android:id="@+id/itemFitToScreen" android:title="@string/fit_to_screen" android:checked="true"/>
            </group>
        </menu>
    </item>
    
    <item android:numericShortcut="9" android:alphabeticShortcut="i" android:id="@+id/itemInfo" android:title="@string/info" android:icon="@android:drawable/ic_menu_info_details"  android:showAsAction="ifRoom|withText" android:focusable="false"></item>
    
    <item android:alphabeticShortcut="h" android:id="@+id/itemArrowLeft" android:title="@string/arrow_left"  android:showAsAction="ifRoom|withText" android:focusable="false"/>
    <item android:alphabeticShortcut="j" android:id="@+id/itemArrowDown" android:title="@string/arrow_down"  android:showAsAction="ifRoom|withText" android:focusable="false"/>
    <item android:alphabeticShortcut="k" android:id="@+id/itemArrowUp" android:title="@string/arrow_up"  android:showAsAction="ifRoom|withText" android:focusable="false"/>
    <item android:alphabeticShortcut="l" android:id="@+id/itemArrowRight" android:title="@string/arrow_right" android:showAsAction="ifRoom|withText" android:focusable="false"></item>
    <!--<item android:id="@+id/itemOpenDoc" android:title="@string/open_doc" android:icon="@android:drawable/ic_menu_help"/>-->
   



</menu>
